# pythoneers-rust-workshop

./: .gitignore  README.md  Rust.pptx  intro_pyo3.py  maze_solver.py  palindrome.py  pyproject.toml
intro_py_rs/: Cargo.toml
intro_py_rs/src/: lib.rs
load_csv_rs/: Cargo.toml
load_csv_rs/src/: lib.rs
palindrome_rs/: Cargo.toml
palindrome_rs/src/: lib.rs
quicksort_rs/: Cargo.toml
quicksort_rs/src/: lib.rs
src/: load_csv_py.py  quicksort_py.py  run_load_csv.py  run_quicksorts.py
tests/: test_palindrome.py
