[tool.poetry]
name = "pythoneers-rust-workshop"
version = "0.1.0"
description = "a workshop to learn how to use rust to make python faster"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
pytest = "^8.2.2"
maturin = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
